--- a/files/en-us/learn/server-side/express_nodejs/development_environment/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/development_environment/index.html
@@ -210,9 +210,9 @@ cd myapp</pre>
   },
   "author": "",
   "license": "ISC",
-<strong>  "dependencies": {
+  "dependencies": {
     "express": "^4.17.1"
-  }</strong>
+  }
 }
 </pre>
  </li>
@@ -296,7 +296,7 @@ npm run lint
 <pre><code>npm install express-generator -g</code></pre>
 
 <div class="notecard note">
-<p><strong>Note: </strong>You may need to prefix this line with <code>sudo</code> on Ubuntu or macOS. The <code>-g</code> flag installs the tool globally so that you can call it from anywhere.</p>
+<p><strong>Note:</strong> You may need to prefix this line with <code>sudo</code> on Ubuntu or macOS. The <code>-g</code> flag installs the tool globally so that you can call it from anywhere.</p>
 </div>
 
 <p>To create an <em>Express</em> app named "helloworld" with the default settings, navigate to where you want to create it and run the app as shown:</p>
@@ -304,7 +304,7 @@ npm run lint
 <pre class="brush: bash">express helloworld</pre>
 
 <div class="notecard note">
-<p><strong>Note:</strong> You can also specify the template library to use and a number of other settings. Use the <code>help</code> command to see all the options:</p>
+  <p><strong>Note:</strong> You can also specify the template library to use and a number of other settings. Use the <code>help</code> command to see all the options:</p>
 <pre class="brush: bash">express --help</pre>
 
 <p><strong>Note:</strong> If you're using NodeJS <b>version &gt 8.2.0 or latest</b>, you can skip the installation and run express-generator with <code>npx</code>:</p>
