--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/template_primer/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/template_primer/index.html
@@ -28,13 +28,14 @@ tags:
 app.set('views', path.join(__dirname, 'views'));
 app.set('view engine', 'pug');</pre>
 
-<p>If you look in the views directory you will see the .pug files for the project's default views. These include the view for the home page (<strong>index.pug</strong>) and base template (<strong>layout.pug</strong>) that we will need to replace with our own content.</p>
+<p>If you look in the views directory you will see the .pug files for the project's default views.
+These include the view for the home page (<strong>index.pug</strong>) and base template (<strong>layout.pug</strong>) that we will need to replace with our own content.</p>
 
 <pre>/express-locallibrary-tutorial  //the project root
   /views
     error.pug
-    <strong>index.pug</strong>
-    <strong>layout.pug</strong>
+    index.pug
+    layout.pug
 </pre>
 
 <h2 id="Template_syntax">Template syntax</h2>
