--- a/files/en-us/learn/server-side/express_nodejs/mongoose/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/mongoose/index.html
@@ -215,20 +215,21 @@ var SomeModel = mongoose.model('SomeModel', SomeModelSchema );</strong></pre>
 
 <h4 id="Schema_types_fields">Schema types (fields)</h4>
 
-<p>A schema can have an arbitrary number of fields — each one represents a field in the documents stored in <em>MongoDB</em>. An example schema showing many of the common field types and how they are declared is shown below.</p>
+<p>A schema can have an arbitrary number of fields — each one represents a field in the documents stored in <em>MongoDB</em>.
+An example schema showing many of the common field types and how they are declared is shown below.</p>
 
 <pre class="brush: js">var schema = new Schema(
 {
-  name: <strong>String</strong>,
-  binary: <strong>Buffer</strong>,
-  living: <strong>Boolean</strong>,
-  updated: { type: <strong>Date</strong>, default: Date.now() },
-  age: { type: <strong>Number</strong>, min: 18, max: 65, required: true },
-  mixed: <strong>Schema.Types.Mixed</strong>,
-  _someId: <strong>Schema.Types.ObjectId</strong>,
-  array: <strong>[]</strong>,
-  ofString: [<strong>String</strong>], // You can also have an array of each of the other types too.
-  nested: { stuff: { type: <strong>String</strong>, lowercase: true, trim: true } }
+  name: String,
+  binary: Buffer,
+  living: Boolean,
+  updated: { type: Date, default: Date.now() },
+  age: { type: Number, min: 18, max: 65, required: true },
+  mixed: Schema.Types.Mixed,
+  _someId: Schema.Types.ObjectId,
+  array: [],
+  ofString: [String], // You can also have an array of each of the other types too.
+  nested: { stuff: { type: String, lowercase: true, trim: true } }
 })</pre>
 
 <p>Most of the <a href="https://mongoosejs.com/docs/schematypes.html">SchemaTypes</a> (the descriptors after “type:” or after field names) are self-explanatory. The exceptions are:</p>
