--- a/files/en-us/learn/server-side/express_nodejs/deployment/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/deployment/index.html
@@ -126,7 +126,9 @@ tags:
 
 <p>Logging calls can have an impact on a high-traffic website. In a production environment, you may need to log website activity (e.g. tracking traffic or logging API calls) but you should attempt to minimize the amount of logging added for debugging purposes.</p>
 
-<p>One way to minimize "debug" logging in production is to use a module like <a href="https://www.npmjs.com/package/debug">debug</a> that allows you to control what logging is performed by setting an environment variable. For example, the code fragment below shows how you might set up "author" logging. The debug variable is declared with the name 'author', and the prefix "author" will be automatically displayed for all logs from this object.</p>
+<p>One way to minimize "debug" logging in production is to use a module like <a href="https://www.npmjs.com/package/debug">debug</a> that allows you to control what logging is performed by setting an environment variable.
+For example, the code fragment below shows how you might set up "author" logging.
+The debug variable is declared with the name 'author', and the prefix "author" will be automatically displayed for all logs from this object.</p>
 
 <pre class="brush: js"><strong>var debug = require('debug')('author');</strong>
 
@@ -136,7 +138,7 @@ exports.author_update_get = function(req, res, next) {
     req.sanitize('id').escape().trim();
     Author.findById(req.params.id, function(err, author) {
         if (err) {
-<strong>            debug('update error:' + err);</strong>
+            debug('update error:' + err);
             return next(err);
         }
         //On success
@@ -171,14 +173,14 @@ export DEBUG="author,book"
 <p>Open <strong>./app.js</strong> and require the compression library as shown. Add the compression library to the middleware chain with the <code>use()</code> method (this should appear before any routes you want compressed — in this case, all of them!)</p>
 
 <pre class="brush: js">var catalogRouter = require('./routes/catalog'); //Import routes for "catalog" area of site
-<strong>var compression = require('compression');</strong>
+var compression = require('compression');
 
 // Create the Express application object
 var app = express();
 
 ...
 
-<strong>app.use(compression()); //Compress all routes</strong>
+app.use(compression()); //Compress all routes
 
 app.use(express.static(path.join(__dirname, 'public')));
 
@@ -202,15 +204,16 @@ app.use('/catalog', catalogRouter);  // Add catalog routes to middleware chain.
 <pre class="brush: bash">npm install helmet
 </pre>
 
-<p>Open <strong>./app.js</strong> and require the <em>helmet</em> library as shown. Then add the module to the middleware chain with the <code>use()</code> method.</p>
+<p>Open <strong>./app.js</strong> and require the <em>helmet</em> library as shown.
+Then add the module to the middleware chain with the <code>use()</code> method.</p>
 
 <pre class="brush: js">var compression = require('compression');
-<strong>var helmet = require('helmet');
-</strong>
+var helmet = require('helmet');
+
 // Create the Express application object
 var app = express();
 
-<strong>app.use(helmet())</strong>;
+app.use(helmet());
 ...</pre>
 
 <div class="notecard note">
@@ -372,7 +375,7 @@ v12.18.4</pre>
 
 <pre class="brush: js">// Set up mongoose connection
 var dev_db_url = 'mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true'
-var mongoDB = <strong>process.env.MONGODB_URI</strong> || dev_db_url;
+var mongoDB = process.env.MONGODB_URI || dev_db_url;
 </pre>
 
 <h4 id="Get_dependencies_and_re-test">Get dependencies and re-test</h4>
@@ -451,9 +454,11 @@ Setting NODE_ENV and restarting limitless-tor-18923... done, v13
 NODE_ENV: production
 </pre>
 
-<p>We should also use a separate database for production, setting its URI in the <strong>MONGODB_URI</strong>  environment variable. You can set up a new database and database-user exactly <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/mongoose#setting_up_the_mongodb_database">as we did originally</a>, and get its URI. You can set the URI as shown (obviously, using your own URI!)</p>
+<p>We should also use a separate database for production, setting its URI in the <strong>MONGODB_URI</strong> environment variable.
+You can set up a new database and database-user exactly <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/mongoose#setting_up_the_mongodb_database">as we did originally</a>, and get its URI.
+You can set the URI as shown (obviously, using your own URI!)</p>
 
-<pre class="brush: bash">&gt;heroku config:set <strong>MONGODB_URI</strong>=mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true
+<pre class="brush: bash">&gt;heroku config:set MONGODB_URI=mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true
 Setting MONGODB_URI and restarting limitless-tor-18923... done, v13
 MONGODB_URI: mongodb+srv://cooluser:coolpassword@cluster0-mbdj7.mongodb.net/local_library?retryWrites=true
 </pre>
