--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/author_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/author_detail_page/index.html
@@ -22,9 +22,9 @@ var Book = require('../models/book');</pre>
 <p>Find the exported <code>author_detail()</code> controller method and replace it with the following code.</p>
 
 <pre class="brush: js">// Display detail page for a specific Author.
-exports.author_detail = function(req, res, <strong>next</strong>) {
+exports.author_detail = function(req, res, next) {
 
-<strong>    async.parallel({
+    async.parallel({
         author: function(callback) {
             Author.findById(req.params.id)
               .exec(callback)
@@ -42,7 +42,7 @@ exports.author_detail = function(req, res, <strong>next</strong>) {
         }
         // Successful, so render.
         res.render('author_detail', { title: 'Author Detail', author: results.author, author_books: results.authors_books } );
-    });</strong>
+    });
 
 };
 </pre>
@@ -57,7 +57,7 @@ exports.author_detail = function(req, res, <strong>next</strong>) {
 
 block content
 
-<strong>  h1 Author: #{author.name}</strong>
+  h1 Author: #{author.name}
   p #{author.date_of_birth} - #{author.date_of_death}
 
   div(style='margin-left:20px;margin-top:20px')
