--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/book_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/book_detail_page/index.html
@@ -15,9 +15,9 @@ tags:
 <p>Open <strong>/controllers/bookController.js</strong>. Find the exported <code>book_detail()</code> controller method and replace it with the following code.</p>
 
 <pre class="brush: js">// Display detail page for a specific book.
-exports.book_detail = function(req, res, <strong>next</strong>) {
+exports.book_detail = function(req, res, next) {
 
-<strong>    async.parallel({
+    async.parallel({
         book: function(callback) {
 
             Book.findById(req.params.id)
@@ -39,14 +39,14 @@ exports.book_detail = function(req, res, <strong>next</strong>) {
         }
         // Successful, so render.
         res.render('book_detail', { title: results.book.title, book: results.book, book_instances: results.book_instance } );
-    });</strong>
+    });
 
 };
 
 </pre>
 
 <div class="notecard note">
-<p><strong>Note:</strong> We don't need to require <em>async</em> and <em>BookInstance</em> in this step, as we already imported those modules when we implemented the home page controller.</p>
+  <p><strong>Note:</strong> We don't need to require <em>async</em> and <em>BookInstance</em> in this step, as we already imported those modules when we implemented the home page controller.</p>
 </div>
 
 <p>The method uses <code>async.parallel()</code> to find the <code>Book</code> and its associated copies (<code>BookInstances</code>) in parallel. The approach is exactly the same as described for the <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Displaying_data/Genre_detail_page">Genre detail page</a>. Since the key 'title' is used to give name to the webpage (as defined in the header in 'layout.pug'), this time we are passing <code>results.book.title</code> while rendering the webpage.</p>
